<resources>
    <string name="app_name">Practiv10</string>
    <string name="smart">моё смарт-устройство</string>
    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>
    <string name="item">TODO</string>
    <string name="item1">TODO</string>
    <string name="item3">TODO</string>
    <string name="item4.1">TODO</string>
    <string name="item4">TODO</string>
    <string name="item5">TODO</string>
    <string name="item6">TODO</string>
    <string name="item7">TODO</string>
    <string name="item8">TODO</string>
    <string name="item15">TODO</string>
    <string name="item9">TODO</string>
    <string name="item10">TODO</string>
    <string name="item11">TODO</string>
    <string name="_1583_steps">1583 steps</string>
    <string name="_82_bmp">82 bmp</string>
    <string name="_62_kg">62 kg</string>
    <string name="_30_min">30 min</string>
    <string name="_59_kcal">59 kcal</string>
    <string name="item14">TODO</string>
    <string name="_1_3_km">1.3 KM</string>
</resources>